force-app/main/default/objects/uNI_ReprogrammingRequest__c/uNI_ReprogrammingRequest__c.object-meta.xml
<CustomObject>
    <description>Reprogramming Obj that will tie up the log frames, budgets and Other relevant Reprogramming request datas</description>
    <label>Reprogramming Request</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Reprogramming Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reprogramming Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>