force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/EuNI_EBMembervotedIds__c.field-meta.xml
<CustomField>
    <fullName>EuNI_EBMembervotedIds__c</fullName>
    <label>EB Member voted Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>