force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ActionName__c.field-meta.xml
<CustomField>
    <fullName>uNI_ActionName__c</fullName>
    <label>Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>