force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_AmIEBVoter__c.field-meta.xml
<CustomField>
    <fullName>uNI_AmIEBVoter__c</fullName>
    <formula>$User.uNI_UnitaidRole__c = &apos;EB&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Am I EB Voter</label>
    <type>Checkbox</type>
</CustomField>