force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_AnnualReportYear__c.field-meta.xml
<CustomField>
    <fullName>uNI_AnnualReportYear__c</fullName>
    <description>this field contains the cutoff year, if reprogramming request is approved before the cutoff date, of that year (31-June) the annual report considers this budget, else , this field is set to next year.</description>
    <formula>IF(
    uNI_ApprovedDate__c &gt; DATE(YEAR(uNI_ApprovedDate__c), 6, 30),
    TEXT(YEAR(uNI_ApprovedDate__c) + 2),
    TEXT(YEAR(uNI_ApprovedDate__c) + 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Report Year</label>
    <type>Text</type>
</CustomField>