force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ApprovedBy__c.field-meta.xml
<CustomField>
    <fullName>uNI_ApprovedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reprogramming_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>