force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ApprovedDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_ApprovedDate__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>