force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_AreCoFundersCloned__c.field-meta.xml
<CustomField>
    <fullName>uNI_AreCoFundersCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are CoFunders Cloned</label>
    <type>Checkbox</type>
</CustomField>