force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_AreSummaryBudgetCloned__c.field-meta.xml
<CustomField>
    <fullName>uNI_AreSummaryBudgetCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Summary Budget Cloned</label>
    <type>Checkbox</type>
</CustomField>