force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_BudgetCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_BudgetCVIds__c</fullName>
    <label>Budget CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>