force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_CommentFromPMPOforNoEBReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_CommentFromPMPOforNoEBReview__c</fullName>
    <label>Comment From PM/PO for No EB Review</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>