force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_CommentsforImplementer__c.field-meta.xml
<CustomField>
    <fullName>uNI_CommentsforImplementer__c</fullName>
    <description>comments for the implementer when the reprogramming request is returned by the Unitaid Staff.</description>
    <label>Comments for Implementer</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>