force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_CommentsforUnitaid__c.field-meta.xml
<CustomField>
    <fullName>uNI_CommentsforUnitaid__c</fullName>
    <label>Comments for Unitaid</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>