force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Countries__c.field-meta.xml
<CustomField>
    <fullName>uNI_Countries__c</fullName>
    <label>Countries</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>