force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_CurrentActionOwner__c.field-meta.xml
<CustomField>
    <fullName>uNI_CurrentActionOwner__c</fullName>
    <label>Current Action Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unitaid</fullName>
            </value>
            <value>
                <fullName>Implementer</fullName>
            </value>
            <value>
                <fullName>PM/PO</fullName>
            </value>
            <value>
                <fullName>PRC</fullName>
            </value>
            <value>
                <fullName>Grantee</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Senior Legal Officer</fullName>
            </value>
            <value>
                <fullName>Director PD</fullName>
            </value>
            <value>
                <fullName>GAM</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>SMT</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>EB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>