force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_CurrentActionOwnerTask__c.field-meta.xml
<CustomField>
    <fullName>uNI_CurrentActionOwnerTask__c</fullName>
    <formula>IF(
  AND(
    uNI_IsUserActionOwner__c,
    uNI_IsUserSecondaryOwner__c,
    uNI_IsUserThirdActionOwner__c
  ),
  uNI_CurrentPendingTask__c &amp; BR() &amp;
  uNI_SecondaryCurrentPendingTask__c &amp; BR() &amp;
  uNI_ThirdCurrentPendingTask__c,

  IF(
    AND(uNI_IsUserActionOwner__c, uNI_IsUserSecondaryOwner__c),
    uNI_CurrentPendingTask__c &amp; BR() &amp;
    uNI_SecondaryCurrentPendingTask__c,

    IF(
      AND(uNI_IsUserActionOwner__c, uNI_IsUserThirdActionOwner__c),
      uNI_CurrentPendingTask__c &amp; BR() &amp;
      uNI_ThirdCurrentPendingTask__c,

      IF(
        AND(uNI_IsUserSecondaryOwner__c, uNI_IsUserThirdActionOwner__c),
        uNI_SecondaryCurrentPendingTask__c &amp; BR() &amp;
        uNI_ThirdCurrentPendingTask__c,

        IF(
          uNI_IsUserActionOwner__c,
          uNI_CurrentPendingTask__c,

          IF(
            uNI_IsUserSecondaryOwner__c,
            uNI_SecondaryCurrentPendingTask__c,

            IF(
              uNI_IsUserThirdActionOwner__c,
              uNI_ThirdCurrentPendingTask__c,
              &quot;&quot;
            )
          )
        )
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Action Owner Task</label>
    <type>Text</type>
</CustomField>