force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_CurrentPendingTask__c.field-meta.xml
<CustomField>
    <fullName>uNI_CurrentPendingTask__c</fullName>
    <label>Current Pending Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>