force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_DatewhenEDSignedFacesheet__c.field-meta.xml
<CustomField>
    <fullName>uNI_DatewhenEDSignedFacesheet__c</fullName>
    <label>Date when ED Signed Facesheet</label>
    <type>Date</type>
</CustomField>