force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_DatewhenGranteeSignedFacesheet__c.field-meta.xml
<CustomField>
    <fullName>uNI_DatewhenGranteeSignedFacesheet__c</fullName>
    <label>Date when Grantee Signed Face sheet</label>
    <type>Date</type>
</CustomField>