force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_DirectorPDCommentForSMTReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_DirectorPDCommentForSMTReview__c</fullName>
    <label>Director PD Comment For SMT Review</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>