force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_DocsAffected__c.field-meta.xml
<CustomField>
    <fullName>uNI_DocsAffected__c</fullName>
    <description>The docs Affected. Fetched from the picklist fields</description>
    <label>Docs Affected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>