force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_DocumentsAffected__c.field-meta.xml
<CustomField>
    <fullName>uNI_DocumentsAffected__c</fullName>
    <description>Documents that are affected when a reprogramming request is placed.</description>
    <label>Documents Affected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logframe</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
            <value>
                <fullName>Project Plan</fullName>
            </value>
            <value>
                <fullName>Face Sheet</fullName>
            </value>
            <value>
                <fullName>Reporting and accountability Framework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>