force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EBApproved__c.field-meta.xml
<CustomField>
    <fullName>uNI_EBApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to track if the proposal is EB approved or not.</description>
    <label>EB Approved</label>
    <type>Checkbox</type>
</CustomField>