force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EBDecision__c.field-meta.xml
<CustomField>
    <fullName>uNI_EBDecision__c</fullName>
    <label>EB Decision</label>
    <length>255</length>
    <type>Text</type>
</CustomField>