force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EBHomePortalLink__c.field-meta.xml
<CustomField>
    <fullName>uNI_EBHomePortalLink__c</fullName>
    <formula>$Label.uNI_SiteLink &amp; &apos;s/eb-home&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EB Home Portal Link</label>
    <type>Text</type>
</CustomField>