force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EBIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_EBIds__c</fullName>
    <label>EB Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>