force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EBReviewComments__c.field-meta.xml
<CustomField>
    <fullName>uNI_EBReviewComments__c</fullName>
    <label>EB Review comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>