force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EBVoteRequiredOrNot__c.field-meta.xml
<CustomField>
    <fullName>uNI_EBVoteRequiredOrNot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EB Vote Required Or Not For GAD</label>
    <type>Checkbox</type>
</CustomField>