force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EDComment__c.field-meta.xml
<CustomField>
    <fullName>uNI_EDComment__c</fullName>
    <label>ED Comment</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>