force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_EDOutcome__c.field-meta.xml
<CustomField>
    <fullName>uNI_EDOutcome__c</fullName>
    <label>ED Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>