force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FacesheetCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_FacesheetCVIds__c</fullName>
    <description>stores the Facesheet CV ids for the the reprogramming requests</description>
    <label>Facesheet CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>