force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FilesForPRCReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_FilesForPRCReview__c</fullName>
    <label>Files For PRC review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>