force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FilesSelectedForPRCReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_FilesSelectedForPRCReview__c</fullName>
    <label>Files Selected For PRC Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>