force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FilesSelectedForStage1__c.field-meta.xml
<CustomField>
    <fullName>uNI_FilesSelectedForStage1__c</fullName>
    <label>Files Selected For Stage 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>