force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FilesSelectedForStage2__c.field-meta.xml
<CustomField>
    <fullName>uNI_FilesSelectedForStage2__c</fullName>
    <label>Files Selected For Stage 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>