force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FilesSelectedForStage3__c.field-meta.xml
<CustomField>
    <fullName>uNI_FilesSelectedForStage3__c</fullName>
    <label>Files Selected For Stage 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>