force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FilesSelectedForStage4SMTReview__c.field-meta.xml
<CustomField>
    <fullName>uNI_FilesSelectedForStage4SMTReview__c</fullName>
    <label>Files Selected For Stage 4 SMT Review</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>