force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_FundingAmount__c.field-meta.xml
<CustomField>
    <fullName>uNI_FundingAmount__c</fullName>
    <label>Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>