force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GAMCommentforEB__c.field-meta.xml
<CustomField>
    <fullName>uNI_GAMCommentforEB__c</fullName>
    <label>GAM Comment for EB</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>