force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GAMCommentForEBVoting__c.field-meta.xml
<CustomField>
    <fullName>uNI_GAMCommentForEBVoting__c</fullName>
    <label>GAM Comment For EB Voting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>