force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GranteeSelfNoteForStage1__c.field-meta.xml
<CustomField>
    <fullName>uNI_GranteeSelfNoteForStage1__c</fullName>
    <label>Grantee Self Note For Stage 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>