force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GranteeSelfNoteForStage3__c.field-meta.xml
<CustomField>
    <fullName>uNI_GranteeSelfNoteForStage3__c</fullName>
    <label>Grantee Self Note for Stage 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>