force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GranteeStage1CommentForUnitiad__c.field-meta.xml
<CustomField>
    <fullName>uNI_GranteeStage1CommentForUnitiad__c</fullName>
    <label>Grantee Stage1 Comment For Unitiad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>