force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GranteeStage2CommentForUnitiad__c.field-meta.xml
<CustomField>
    <fullName>uNI_GranteeStage2CommentForUnitiad__c</fullName>
    <label>Grantee Stage 2 Comments for Unitaid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>