force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GranteeStage3CommentForUnitiad__c.field-meta.xml
<CustomField>
    <fullName>uNI_GranteeStage3CommentForUnitiad__c</fullName>
    <label>Grantee Stage 3 Comment For Unitiad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>