force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_GranteeStage4CommentforUnitaid__c.field-meta.xml
<CustomField>
    <fullName>uNI_GranteeStage4CommentforUnitaid__c</fullName>
    <label>Grantee Stage 4 Comment for Unitaid</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>