force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_HasAllPTClearedSMTPackage__c.field-meta.xml
<CustomField>
    <fullName>uNI_HasAllPTClearedSMTPackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has All PT Cleared SMT Package</label>
    <type>Checkbox</type>
</CustomField>