force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_HasAnyPTrejected__c.field-meta.xml
<CustomField>
    <fullName>uNI_HasAnyPTrejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Any PT rejected for Reprogramming</description>
    <label>Has Any PT rejected</label>
    <type>Checkbox</type>
</CustomField>