force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ImplementationEndDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_ImplementationEndDate__c</fullName>
    <label>Implementation End Date</label>
    <type>Date</type>
</CustomField>