force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ImplementationStartDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_ImplementationStartDate__c</fullName>
    <label>Implementation Start Date</label>
    <type>Date</type>
</CustomField>