force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ImplicationsGoalObjImpact__c.field-meta.xml
<CustomField>
    <fullName>uNI_ImplicationsGoalObjImpact__c</fullName>
    <label>Implications for the Grant’s Goal, Obj.</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>