force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ImplicationsonFundingBudget__c.field-meta.xml
<CustomField>
    <fullName>uNI_ImplicationsonFundingBudget__c</fullName>
    <label>Implications on Funding/Budget</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>