force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_ImplicationsonGrantRisk__c.field-meta.xml
<CustomField>
    <fullName>uNI_ImplicationsonGrantRisk__c</fullName>
    <label>Implications on Grant Risk</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>