force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Investment__c.field-meta.xml
<CustomField>
    <fullName>uNI_Investment__c</fullName>
    <description>The master detail relation between the Investment and the Reprogramming request</description>
    <label>Investment</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Reprogramming Requests</relationshipLabel>
    <relationshipName>Reprogramming_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>