force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsApprovedbyDirectorPD__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsApprovedbyDirectorPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved by Director PD</label>
    <type>Checkbox</type>
</CustomField>