force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsApprovedBySeniorLegalOfficer__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsApprovedBySeniorLegalOfficer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved By Senior Legal Officer</label>
    <type>Checkbox</type>
</CustomField>