force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsCountryCloned__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsCountryCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Country Cloned</label>
    <type>Checkbox</type>
</CustomField>