force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsEBRequiredDecisionTaken__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsEBRequiredDecisionTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EB Required Decision Taken</label>
    <type>Checkbox</type>
</CustomField>