force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsEBReviewDone__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsEBReviewDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EB Review Done</label>
    <type>Checkbox</type>
</CustomField>