force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsEBReviewStarted__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsEBReviewStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EB Review Started</label>
    <type>Checkbox</type>
</CustomField>