force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsEBVoteRequiredOrNot__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsEBVoteRequiredOrNot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is EB Vote Required Or Not</label>
    <type>Checkbox</type>
</CustomField>