force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsGADSMTReviewStarted__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsGADSMTReviewStarted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GAD SMT Review Started</label>
    <type>Checkbox</type>
</CustomField>