force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_isGrantDataClonedForProjectParam__c.field-meta.xml
<CustomField>
    <fullName>uNI_isGrantDataClonedForProjectParam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Grant Data Cloned For Project Param</label>
    <type>Checkbox</type>
</CustomField>