force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_isOMTReviewDateConfirmed__c.field-meta.xml
<CustomField>
    <fullName>uNI_isOMTReviewDateConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is OMT  Review Date Confirmed</label>
    <type>Checkbox</type>
</CustomField>