force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_isPRCReviewDateConfirmed__c.field-meta.xml
<CustomField>
    <fullName>uNI_isPRCReviewDateConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PRC Review Date confirmed</label>
    <type>Checkbox</type>
</CustomField>