force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsPRCReviewStarted__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsPRCReviewStarted__c</fullName>
    <label>Is PRC Review Started</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>