force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsProjectParameterCreatedForRep__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsProjectParameterCreatedForRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Project Prameter Created</label>
    <type>Checkbox</type>
</CustomField>