force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsReviewedByDirectorPD__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsReviewedByDirectorPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reviewed By Director PD</label>
    <type>Checkbox</type>
</CustomField>