force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsReviewedBySeniorlegalOfficer__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsReviewedBySeniorlegalOfficer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reviewed By Senior legal Officer</label>
    <type>Checkbox</type>
</CustomField>