force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsSMTReviewStopped__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsSMTReviewStopped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SMT Review Stopped</label>
    <type>Checkbox</type>
</CustomField>