force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_isStage1Defined__c.field-meta.xml
<CustomField>
    <fullName>uNI_isStage1Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage 1 Defined</label>
    <type>Checkbox</type>
</CustomField>