force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsStage1PackageSubmitted__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsStage1PackageSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage 1 Package Submitted</label>
    <type>Checkbox</type>
</CustomField>