force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_isStage2Defined__c.field-meta.xml
<CustomField>
    <fullName>uNI_isStage2Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Stage 2 Defined</label>
    <type>Checkbox</type>
</CustomField>