force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsStage2OMTPRCReminderToBeSent__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsStage2OMTPRCReminderToBeSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage 2 OMT/PRC Reminder To Be Sent</label>
    <type>Checkbox</type>
</CustomField>