force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsStage3IROFileUploaded__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsStage3IROFileUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage 3 IRO File uploaded</label>
    <type>Checkbox</type>
</CustomField>