force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsStage4EBResolutionUploaded__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsStage4EBResolutionUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage 4 EB resolution Uploaded</label>
    <type>Checkbox</type>
</CustomField>