force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsStage4FeedbackMatrixUploaded__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsStage4FeedbackMatrixUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stage 4 Feedback matrix uploaded</label>
    <type>Checkbox</type>
</CustomField>