force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsSubmittedbyDirectorAndLegal__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsSubmittedbyDirectorAndLegal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted by Director And Legal</label>
    <type>Checkbox</type>
</CustomField>