force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsSubmittedforSMTClearance__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsSubmittedforSMTClearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted for SMT Clearance</label>
    <type>Checkbox</type>
</CustomField>