force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsUserActionOwner__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsUserActionOwner__c</fullName>
    <formula>Contains( uNI_WaitingForActionIdFormula__c , $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Action owner</label>
    <type>Checkbox</type>
</CustomField>