force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsUserPM__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsUserPM__c</fullName>
    <formula>CONTAINS( uNI_ProgramManagerUser__c , $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User PM</label>
    <type>Checkbox</type>
</CustomField>