force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsUserPMOrPO__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsUserPMOrPO__c</fullName>
    <formula>uNI_IsUserPM__c || uNI_IsUserPO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User PM or PO</label>
    <type>Checkbox</type>
</CustomField>