force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsUserPO__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsUserPO__c</fullName>
    <formula>CONTAINS( uNI_ProgramOfficerUser__c , $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User PO</label>
    <type>Checkbox</type>
</CustomField>