force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsUserSecondaryOwner__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsUserSecondaryOwner__c</fullName>
    <formula>Contains( uNI_SecondaryWaitingForActionByIdFormula__c ,$User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Secondary Owner</label>
    <type>Checkbox</type>
</CustomField>