force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_IsUserThirdActionOwner__c.field-meta.xml
<CustomField>
    <fullName>uNI_IsUserThirdActionOwner__c</fullName>
    <formula>Contains( uNI_ThirdWaitingForActionByIdFormula__c  ,$User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User third Action owner</label>
    <type>Checkbox</type>
</CustomField>