force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_Logframe__c.field-meta.xml
<CustomField>
    <fullName>uNI_Logframe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the related (newly created logframe tagged to this reprogramming request)</description>
    <label>Logframe</label>
    <referenceTo>uNI_Logframe__c</referenceTo>
    <relationshipLabel>Reprogramming Requests</relationshipLabel>
    <relationshipName>Reprogramming_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>