force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_LogframeCVIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_LogframeCVIds__c</fullName>
    <label>Logframe CV Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>