force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_LogframeVersion__c.field-meta.xml
<CustomField>
    <fullName>uNI_LogframeVersion__c</fullName>
    <description>The next logframe version, if this reprogramming request is approved, then this logframe version will be the live logframe version in the individual application</description>
    <label>Logframe Version</label>
    <length>100</length>
    <type>Text</type>
</CustomField>