force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_OMTReviewDate__c.field-meta.xml
<CustomField>
    <fullName>uNI_OMTReviewDate__c</fullName>
    <label>OMT Review Date</label>
    <type>Date</type>
</CustomField>