force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_OMTReviewerIds__c.field-meta.xml
<CustomField>
    <fullName>uNI_OMTReviewerIds__c</fullName>
    <description>OMT Reviewer Ids for Reprogramming</description>
    <label>OMT Reviewer Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>