force-app/main/default/objects/uNI_ReprogrammingRequest__c/fields/uNI_OMTReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>uNI_OMTReviewStatus__c</fullName>
    <label>OMT Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>